# gui-display

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/listen_quaternion/lib/listen_quaternion/: display  display2  display2 = listen_quaternion.gui:maindisplay3  display3
install/listen_quaternion/share/listen_quaternion/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/listen_quaternion/: setup.cfg  setup.py
src/listen_quaternion/listen_quaternion/: backup  backup2  backup3  gui.py  gui_backup_finish  quaternion.py
