<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>listen_quaternion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kritpetch@todo.todo">kritpetch</maintainer>
  <license>TODO: License declaration</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tkinter</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>kivy</exec_depend>
  <exec_depend>kivymd</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <exec_depend>ui_mainwindow</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>time</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>



